--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇰🇷 韩国-6.03MB/s(Youtube:不良林), server: 146.56.96.252, port: 2333, type: ssr, cipher: aes-256-cfb, password: doub.io, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-379.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-621.9KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20719, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-881.4KB/s(Youtube:不良林), server: baying.xiba1.xyz, port: 949, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: baying.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-932.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20742, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: baying.xiba1.xyz, port: 936, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: baying.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.64MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.35MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.62MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.68MB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇨🇳 中国-410.4KB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇮🇳 印度-2.60MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
