--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-10.10MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.93MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.79MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.70MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-14.56MB/s(Youtube:不良林), server: jplin003.xmrth-node.xyz, port: 15901, type: vmess, uuid: f727bfd8-122f-38a0-82b4-d98e61820d0e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jplin003.xmrth-node.xyz}}
+  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
